[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/object.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.5
bounce = 0.3

[sub_resource type="Gradient" id=7]
colors = PoolColorArray( 1, 0.8, 0, 0, 1, 0.8, 0, 0.745098 )

[sub_resource type="CircleShape2D" id=6]
radius = 35.3537

[sub_resource type="CircleShape2D" id=4]
radius = 46.868

[node name="object" type="RigidBody2D" groups=[
"bll",
]]
z_index = 9
z_as_relative = false
input_pickable = true
mass = 2.0
physics_material_override = SubResource( 1 )
gravity_scale = 5.0
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 2 )
trailColor = SubResource( 7 )

[node name="image" type="Sprite" parent="."]
z_index = 9
z_as_relative = false
texture = ExtResource( 1 )

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="visibility" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 0.429214, 0.429214 )

[node name="checkCollision" type="Area2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="checkCollision"]
shape = SubResource( 4 )
[connection signal="sleeping_state_changed" from="." to="." method="_on_object_sleeping_state_changed"]
[connection signal="screen_exited" from="visibility" to="." method="_on_visibility_screen_exited"]
[connection signal="body_entered" from="checkCollision" to="." method="_on_checkCollision_body_entered"]
